blog service - security adding auto configuration with properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=gomito1826
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.security.user.name=milton
+spring.security.user.password=munoz
+spring.secutiry.user.roles=ADMIN
